<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black">


<!--    <View-->
<!--        android:id="@+id/viewGlowAccent"-->
<!--        android:layout_width="500dp"-->
<!--        android:layout_height="500dp"-->
<!--        android:background="@drawable/bg_purple_glow"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->


    <LinearLayout
        android:id="@+id/layoutCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <FrameLayout
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/bg_icon_circle"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgAppIcon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_book_open"
                android:contentDescription="App icon" />
        </FrameLayout>


        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name_display"
            android:textSize="48sp"
            android:fontFamily="@font/public_sans_bold"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:letterSpacing="-0.025"
            android:gravity="center" />


        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tagline"
            android:textSize="18sp"
            android:fontFamily="@font/public_sans_regular"
            android:textColor="@color/text_muted"
            android:gravity="center" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/public_sans_bold"
        android:textStyle="bold"
        android:letterSpacing="0.01"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button_gradient"
        app:cornerRadius="12dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>